<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC300"
    tools:context=".Login" >

    <ImageView
        android:id="@+id/imageFox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitStart"
        android:contentDescription="@string/image_fox_login"
        app:layout_constraintDimensionRatio="1:1.05"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineImgLoginTop"
        app:srcCompat="@drawable/ic_fox_login" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35016835" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineImgLoginTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/panel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelinePanel">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTextLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.08" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.22" />

        <TextView
            android:id="@+id/titleLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/futura_extra_black"
            android:text="@string/log_in_text"
            android:textColor="@color/blackTheme"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guidelineTextLogin"
            app:layout_constraintWidth_percent="0.53" />

        <TextView
            android:id="@+id/titleEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/futura_heavy"
            android:text="@string/email"
            android:textColor="@color/blackTheme"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guidelineTextEmail"
            app:layout_constraintWidth_percent="0.7" />

        <EditText
            android:id="@+id/editTextLengthSquare"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/userfield"
            android:ems="10"
            android:fontFamily="@font/futura_heavy"
            android:hint="@string/name_mail_com"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColorHint="@color/darkGreyTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleEmail"
            app:layout_constraintWidth_percent="0.7" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.42" />

        <TextView
            android:id="@+id/titlePassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/futura_heavy"
            android:text="@string/password"
            android:textColor="@color/blackTheme"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guidelineTextPassword"
            app:layout_constraintWidth_percent="0.7" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/userfield"
            android:ems="10"
            android:fontFamily="@font/futura_heavy"
            android:hint="@string/password"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:inputType="textPassword"
            android:textColorHint="@color/darkGreyTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titlePassword"
            app:layout_constraintWidth_percent="0.7" />

        <TextView
            android:id="@+id/textForgetPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/futura_heavy"
            android:text="@string/forget_password"
            android:textAlignment="textEnd"
            android:textColor="@color/redTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            app:layout_constraintWidth_percent="0.7" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineSubmitLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.67" />

        <Button
            android:id="@+id/submitLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#F55353"
            android:fontFamily="@font/futura_heavy"
            android:letterSpacing="0.05"
            android:onClick="attemptLogin"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:stateListAnimator="@null"
            android:text="@string/log_in_text"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:cornerRadius="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guidelineSubmitLogin"
            app:layout_constraintWidth_percent="0.7" />

        <TextView
            android:id="@+id/textNoAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:fontFamily="@font/futura_heavy"
            android:text="@string/no_account_create_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/submitLogin" />

        <ImageView
            android:id="@+id/backButtonLoginID"
            android:layout_width="31dp"
            android:layout_height="24dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="7dp"
            android:onClick="backButtonLogin"
            app:layout_constraintEnd_toStartOf="@+id/titleLogin"
            app:layout_constraintTop_toTopOf="@+id/guidelineTextLogin"
            app:srcCompat="@drawable/backbutton" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>